--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
       <td><img src="https://i.pinimg.com/564x/42/59/c9/4259c9739c2baf120fdd8fd312120c0f.jpg" alt="Animae boy"></td>
       <td><p><h1>DOMASANI DAVID RAJ</h1><em>student <strong>St.Marys group guntur</strong></em> </p>
       <p>I am student of stmarys college studying btech in EEE and a tech
-         enthusiast. my intrests are technology,innovation,entreprenuership.
-          You can reach me anywhere on the web of lies at an undisclosed manner of
-           certain level in the paradigram of india that enclosed 3 sides by ocean
-           and one side mountains</p></td>
+         enthusiast. my intrests are technology,innovation,entreprenuership.</p></td>
     </tr>
   </table>
   <hr size="1" noshade>
