--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <table cellspacing='20'>
     <tr>
       <td><img src="https://i.pinimg.com/564x/42/59/c9/4259c9739c2baf120fdd8fd312120c0f.jpg" alt="Animae boy"></td>
-      <td><p><h1>DOMASANI DAVID RAJ</h1><em>student <strong>St.Marys group guntur</strong></em> </p>
-      <p>I am student of stmarys college studying btech in EEE and a tech
-         enthusiast. my intrests are technology,innovation,entreprenuership.</p></td>
+      <td><p><h1>DOMASANI DAVID RAJ</h1><em>Student <strong>St.Marys group guntur</strong></em> </p>
+      <p>I am pursuing B.tech at St.marys group of institutions Guntur.
+          My intrests are technology,innovation,entreprenuership.</p></td>
     </tr>
   </table>
   <hr size="1" noshade>
@@ -21,7 +21,7 @@
   <ul>
   <li>SSC at Margaret English Medium School,Guntur</li>
   <li>Diploma in Polytechnic at Guntur Engineering College,Yanamadala</li>
-  <li>B tech at St.Marys group of institutions Guntur,Chebrolu </li>
+  <li>B.tech at St.Marys group of institutions Guntur,Chebrolu </li>
   </ul>
   <hr size="3" noshade>
   <h3>Work Experience</h3>
@@ -38,7 +38,7 @@
         <td>worked at kumar pumps</td>
       </tr>
       <tr>
-        <td>2018-2019</td>
+        <td>2018-19</td>
         <td>worked at svsp mills</td>
       </tr>
     </tbody>
@@ -54,7 +54,7 @@
       <table cellspacing="10">
         <tr>
           <td>python</td>
-          <td>⭐⭐⭐</td>
+          <td>⭐⭐</td>
         </tr>
         <tr>
           <td>ms office</td>
@@ -64,8 +64,8 @@
       <td>
         <table cellspacing="10">
           <tr>
-            <td>phoyography</td>
-            <td>⭐⭐⭐⭐</td>
+            <td>HTML&CSS</td>
+            <td>⭐⭐⭐</td>
           </tr>
           <tr>
             <td>excel</td>
