--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,7 @@
     <ol type="I">
       <li>playing cricket</li>
       <li>lisetning Music</li>
-      <li>blogging <a href="https://www.stemnews.info/">my tech blog</a></li>
+      <li>Reading books</li>
     </ol>
   </body>
 </html>
